# MMSP2021-Audio2ScoreAlignment

./: LICENSE  Manifest.toml  Project.toml  README.md  README.rst  aligned.mid  bd_eita_aligned.mid  bd_fede_aligned.mid  eita_aligned.mid  eita_tool  evaluate_audio2score.sh  fede_aligned.mid  matperfm.csv  matscore.csv  multi-missing-bach10a2m.pkl  multi-nomissing-bach10.notes  multi-nomissing-bach10a2m.pkl  piano-missing-smd.notes  piano-nomissing-smd.notes  pyproject.toml  refaligned.mid  run.py  setup.py
alignment/: Manifest.toml  Project.toml  align.py  alignment_eita.py  alignment_fede.jl  alignment_fede.py  alignment_tafe.py  analysis.py  cdist.c  cdist.py.back  cdist.pyx  clustering.jl  dtw.jl  evaluate_audio2score.py  evaluate_midi2midi.py  fede_dist.jl  fede_dist.py  fede_dtw.jl  fede_dtw.py  fede_tuning.jl  fede_tuning.py  settings.py  step_pattern.jl  tafe_tuning.py  transcription.py  utils.py
alignment/asmd/: LICENSE  README.rst  build.py  pyproject.toml  requirements.txt  setup.py  tags
alignment/asmd/asmd/: _add_groups.py  alignment_stats.py  asap.py  asmd.py  audioscoredataset.py  conversion_tool.py  convert_from_file.py  dataset_utils.py  datasets.json  generate_ground_truth.py  idiot.py  install.py  utils.py
alignment/asmd/asmd/definitions/: Bach10.json  Maestro.json  MusicNet.json  PHENICX.json  SMD.json  TRIOS_dataset.json.back  traditional_flute.json  vienna_corpus.json
alignment/asmd/asmd/eita/: MIDIToMIDIAlign.sh  MusicXMLToMIDIAlign.sh  alignment_eita.py  compile.sh
alignment/asmd/asmd/eita/Programs/: ErrorDetection  Fmt3xToHmm  MatchToCorresp  MusicXMLToFmt3x  MusicXMLToHMM  RealignmentMOHMM  ScorePerfmMatcher  SprToFmt3x  midi2pianoroll
alignment/asmd/asmd/my_scores/: Chopin_op38.mid  Schubert_D783_no15.mid
alignment/asmd/docs/: API.rst  Adding_datasets.rst  Converting.rst  Installation.rst  JSON.rst  License.rst  Reproduce_from_scratch.rst  Scientific_notes.rst  Utilities.rst  conf.py  index.rst
alignment/pybnn/: tags
ardour_compare/: ardour_compare.ardour  ardour_compare.ardour.bak  ardour_compare.history  ardour_compare.history.bak  instant.xml
my_scores/: Chopin_op10_no3.mid  Mozart_K331_1st-mov.mid  Schubert_D783_no15_p04.mid
(+140 files in other folders)
